--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_bottom_navigation_bar: ^1.3.0
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
   http: ^1.1.0
