--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,16 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_bottom_navigation_bar: ^1.3.0
+  animated_notch_bottom_bar: ^1.0.0
+  animated_splash_screen: ^1.3.0
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.9
   http: ^1.1.0
+  shared_preferences: 2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -51,8 +55,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
